# zoid_lang.old

./: .gitmodules  Cargo.toml  README.md  basic.ll
crates/zoid_ast/: Cargo.toml
crates/zoid_ast/src/: expression.rs  lib.rs  statement.rs  top_level.rs  ty.rs
crates/zoid_codegen_llvm/: Cargo.toml
crates/zoid_codegen_llvm/src/: lib.rs
crates/zoid_diagnostic/: Cargo.toml
crates/zoid_diagnostic/src/: error_codes.rs  lib.rs
crates/zoid_hlir/: Cargo.toml
crates/zoid_hlir/src/: lib.rs
crates/zoid_lexer/: Cargo.toml
crates/zoid_lexer/src/: lib.rs  tests.rs  token.rs
crates/zoid_lexer/tests/: basic.rs  basic.tokens
crates/zoid_lexer/tests/common/: mod.rs
crates/zoid_location/: Cargo.toml
crates/zoid_location/src/: lib.rs
crates/zoid_lowering/: Cargo.toml
crates/zoid_lowering/src/: lib.rs
crates/zoid_parser/: Cargo.toml
crates/zoid_parser/src/: lib.rs
crates/zoid_parser/src/expression/: mod.rs
crates/zoid_parser/src/statement/: mod.rs
crates/zoid_parser/src/top_level/: mod.rs
crates/zoidc/: Cargo.toml
crates/zoidc/src/: main.rs  options.rs
examples/: basic.zd
