[package]
name = "zoid_lowering"
description = "Zoid Language AST Lowering (AST -> HLIR)"
authors = ["Jacob Evans <jacob@jwevans.dev>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zoid_ast = { path = "../zoid_ast" }
zoid_hlir = { path = "../zoid_hlir" }
