[package]
name = "zoid_parser"
description = "Zoid Language Parser (Token Stream -> AST)"
authors = ["Jacob Evans <jacob@jwevans.dev>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zoid_ast = { path = "../zoid_ast" }
zoid_lexer = { path = "../zoid_lexer" }
