[package]
name = "zoid_parser"
version = "0.1.0"
edition = "2021"

authors = ["Jacob Evans <jacob@jwevans.dev>"]

[dependencies]
allocator-api2 = "0.2.16"
bumpalo = { version = "3.15.1", features = ["allocator-api2"] }
hashbrown = "0.14.3"
thiserror = "1.0.57"
zoid_ast = { path = "../zoid_ast" }
zoid_diagnostic = { path = "../zoid_diagnostic" }
zoid_lexer = { path = "../zoid_lexer" }
zoid_location = { path = "../zoid_location" }
